@@ -263,6 +263,7 @@ zztong_tfp_warehouse_01,POI,POI,,x,Allied Shipping,,Allied Versand,Envío aliado
 zztong_trailer_01,POI,POI,,x,14 Fairview Drive,,14 Fairview Drive,14 Fairview Drive,14 Fairview Drive,14 Fairview Drive,14フェアビュードライブ,14 페어 뷰 드라이브,14 Fairview Drive,14 Fairview Drive,14 Fairview Drive,14 Fairview Drive,美景道14号,14 Fairview Drive
 zztong_trailer_02,POI,POI,,x,61 Argyle Drive,,61 Argyle Drive,61 Argyle Drive,61 Argyle Drive,61 Argyle Drive,61アーガイルドライブ,61 아가일 드라이브,61 Argyle Drive,61 Argyle Drive,61 Аргайл Драйв,61 Argyle Drive,阿盖尔道61号,61 Argyle Drive
 zztong_trailer_03,POI,POI,,x,398 Copperhead Road,,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Road,398 Copperhead Yolu,铜斑蛇路398号,398 Copperhead Road
+zztong_trailer_04,POI,POI,,x,Prepper's Refuge,,Preppers Zuflucht,Refugio de Prepper,Refuge de Prepper,Rifugio del prepper,プレッパーの避難所,Prepper의 피난처,Schronienie Preppera,Refúgio de Prepper,Убежище преппер,Prepper'ın sığınağı,Prepper的避难所,Prepper的避難所
 zztong_trailer_park_01,POI,POI,,x,Happy Valley Trailer Park,,Happy Valley Trailer Park,Happy Valley Trailer Park,Happy Valley Trailer Park,Happy Valley Trailer Park,ハッピーバレートレーラーパーク,해피 밸리 트레일러 파크,Happy Valley Trailer Park,Parque de trailer do Happy Valley,Happy Valley Trailer Park,Happy Valley Fragman Parkı,欢乐谷拖车营地,快樂山谷拖車公園
 zztong_trailer_park_02,POI,POI,,x,Pleasant Hills Trailer Park,,Pleasant Hills Trailer Park,Pleasant Hills Trailer Park,Parc de roulottes Pleasant Hills,Pleasant Hills Trailer Park,プレザントヒルズトレーラーパーク,Pleasant Hills Trailer Park,Park Trailer Pleasant Hills,Pleasant Hills Trailer Park,Парк трейлер Pleasant Hills,Pleasant Hills Trailer Park,悦丘拖车营地,宜人的山拖車公園
 zztong_trailer_park_03,POI,POI,,x,Verdant Meadows Trailer Park,,Grüner Meadows Trailer Park,Parque de trailer verdant meadows,Parc à roulottes verdoyantes,Verdant Meadows Trailer Park,緑豊かなメドウズトレーラーパーク,Verdant Meadows Trailer Park,Park Trailer Verdant Meadows,Parque de trailer de Meadows Verdant,Парк трейлеров с зелеными лугами,Yemyeşil meadows fragman parkı,翠茵草场拖车营地,翠綠的草地拖車公園
