@@ -1,0 +1,92 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="1" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 23, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="Zoning" value="none" />
+  <property name="YOffset" value="-3" />
+  <property name="SleeperVolumeTriggeredBy" value=" # # # " />
+  <property name="SleeperVolumeFlags" value="0,0,0,0" />
+  <property name="SleeperIsQuestExclude" value="False,False,False,False" />
+  <property name="SleeperIsLootVolume" value="False,False,False,False" />
+  <property name="SleeperVolumeGroup" value="GroupGenericZombie,3,4,GroupGenericZombie,2,2,GroupGenericZombie,2,3,GroupGenericZombie,3,4" />
+  <property name="SleeperVolumeGroupId" value="1,1,0,0" />
+  <property name="SleeperVolumeStart" value="13, 3, 5#4, 7, 4#3, 4, 13#3, 4, 3" />
+  <property name="SleeperVolumeSize" value="10, 4, 18#11, 4, 17#9, 3, 8#9, 3, 10" />
+  <property name="EditorGroups" value="rural" />
+  <property name="Tags" value="rural, gateway" />
+  <property name="QuestTags" value="clear, fetch" />
+  <property name="POIMarkerSize" value="5, 13, 3#7, 13, 2" />
+  <property name="POIMarkerStart" value="17, 2, -3#16, 2, -2" />
+  <property name="POIMarkerGroup" value="driveway,driveway" />
+  <property name="POIMarkerTags" value="rural#gateway" />
+  <property name="POIMarkerType" value="PartSpawn,PartSpawn" />
+  <property name="POIMarkerPartToSpawn" value="part_driveway_rural_02,part_driveway_gateway_02" />
+  <property name="POIMarkerPartRotations" value="2,2" />
+  <property name="POIMarkerPartSpawnChance" value="1,1" />
+  <property class="Stats">
+    <property name="TotalVertices" value="178962" />
+    <property name="TotalTriangles" value="70697" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="162034" />
+      <property name="Triangles" value="58739" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="14868" />
+      <property name="Triangles" value="8718" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="288" />
+      <property name="Triangles" value="144" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="1772" />
+      <property name="Triangles" value="3096" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="challenge_sinks">
+      <property name="0" value="21, 3, 21" />
+    </property>
+    <property class="POILight">
+      <property name="0" value="14, 4, 14" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="12, 4, 16" />
+    </property>
+    <property class="challenge_polymers">
+      <property name="0" value="22, 3, 16" />
+      <property name="1" value="22, 3, 17" />
+      <property name="2" value="18, 3, 18" />
+      <property name="3" value="20, 3, 18" />
+    </property>
+    <property class="challenge_mech_parts">
+      <property name="0" value="10, 4, 14" />
+    </property>
+    <property class="FetchContainer">
+      <property name="0" value="7, 8, 16" />
+    </property>
+    <property class="Rally">
+      <property name="0" value="18, 3, 1" />
+    </property>
+  </property>
+</prefab>
