@@ -40,6 +40,7 @@ V2.0.027 (ZZ027)
 * Added zztong_speleological_society_01
 * Added zztong_tfp_church_sm_01 because somebody wanted a wilderness church.
 * Added zztong_store_xs_19.
+* Added zztong_trailer_04.
 
 V1.3.026 (ZZ026)
 * Added translations to Localization.txt.
